fix double scroll issue

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -45,6 +45,7 @@ body {
   font-size: 16px;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  height: 100%;
   background-color: config.$bg-color-dark;
 }
 
